--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
-    "@mdi/font": "^7.4.47",
-    "@mdi/js": "^7.4.47",
+    "@nuxt/icon": "^2.1.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/i18n": "^10.1.1",
     "@nuxtjs/tailwindcss": "^6.14.0",
