--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "dependencies": {
     "@nuxt/icon": "^2.1.0",
+    "@nuxt/image": "^2.0.0",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/i18n": "^10.1.1",
+    "@nuxtjs/robots": "^5.5.6",
+    "@nuxtjs/sitemap": "^7.4.7",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.2",
     "axios": "^1.12.2",
